Add recaptcha to the registration form

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -3,3 +3,4 @@ buttons.register = Zarejestruj się
 
 labels.username = Nazwa użytkownika
 labels.password = Hasło
+labels.passwordRepeat = Powtórz hasło
