Working user registration and login

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
@@ -3,4 +3,12 @@ buttons.register = Register
 
 labels.username = Username
 labels.password = Password
-labels.passwordRepeat = Password confirmation
+labels.passwordConfirm = Password confirmation
+
+pl.dmcs.nsai.User.username.nullable = Username can't be empty
+pl.dmcs.nsai.User.username.unique = Username must be unique
+pl.dmcs.nsai.User.password.nullable = Password can't be empty
+pl.dmcs.nsai.User.password.invalid.matchingpasswords = Passwords do not match
+User.invalidUsername = Invalid username
+User.invalidPassword = Invalid password
+User.invalidRecaptcha = Prove you are a human being
