--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -3,4 +3,12 @@ buttons.register = Zarejestruj się
 
 labels.username = Nazwa użytkownika
 labels.password = Hasło
-labels.passwordRepeat = Powtórz hasło
+labels.passwordConfirm = Powtórz hasło
+
+pl.dmcs.nsai.User.username.nullable = Nazwa użytkownika nie może być pusta
+pl.dmcs.nsai.User.username.unique = Nazwa użytkownika jest już zajęta
+pl.dmcs.nsai.User.password.nullable = Hasło nie może być puste
+pl.dmcs.nsai.User.password.invalid.matchingpasswords = Hasła nie nie sa takie same
+User.invalidUsername = Niepoprawna nazwa użytkownika
+User.invalidPassword = Niepoprawne hasło
+User.invalidRecaptcha = Udowodnij, że jesteś istota ludzka
