Add messages for too short field values

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -7,7 +7,9 @@ labels.passwordConfirm = Powtórz hasło
 
 pl.dmcs.nsai.User.username.nullable = Nazwa użytkownika nie może być pusta
 pl.dmcs.nsai.User.username.unique = Nazwa użytkownika jest już zajęta
+pl.dmcs.nsai.User.username.minSize.notmet = Nazwa użytkownika jest za krótka
 pl.dmcs.nsai.User.password.nullable = Hasło nie może być puste
+pl.dmcs.nsai.User.password.minSize.notmet = Hasło jest za krótkie
 pl.dmcs.nsai.User.password.invalid.matchingpasswords = Hasła nie nie sa takie same
 User.invalidUsername = Niepoprawna nazwa użytkownika
 User.invalidPassword = Niepoprawne hasło
