--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
@@ -7,7 +7,9 @@ labels.passwordConfirm = Password confirmation
 
 pl.dmcs.nsai.User.username.nullable = Username can't be empty
 pl.dmcs.nsai.User.username.unique = Username must be unique
+pl.dmcs.nsai.User.username.minSize.notmet = Username is too short
 pl.dmcs.nsai.User.password.nullable = Password can't be empty
+pl.dmcs.nsai.User.password.minSize.notmet = Password is too short
 pl.dmcs.nsai.User.password.invalid.matchingpasswords = Passwords do not match
 User.invalidUsername = Invalid username
 User.invalidPassword = Invalid password
