Send email on successful registration

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
@@ -2,15 +2,22 @@ buttons.login = Login
 buttons.register = Register
 
 labels.username = Username
+labels.email = Email address
 labels.password = Password
 labels.passwordConfirm = Password confirmation
 
 pl.dmcs.nsai.User.username.nullable = Username can't be empty
 pl.dmcs.nsai.User.username.unique = Username must be unique
 pl.dmcs.nsai.User.username.minSize.notmet = Username is too short
+pl.dmcs.nsai.User.email.nullable = Provide your email address
+pl.dmcs.nsai.User.email.invalid = Provided email address is invalid
 pl.dmcs.nsai.User.password.nullable = Password can't be empty
 pl.dmcs.nsai.User.password.minSize.notmet = Password is too short
 pl.dmcs.nsai.User.password.invalid.matchingpasswords = Passwords do not match
+
 User.invalidUsername = Invalid username
+User.invalidEmail = Invalid email address
 User.invalidPassword = Invalid password
 User.invalidRecaptcha = Prove you are a human being
+
+messages.registration = Welcome to the reservation system.
