--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -2,15 +2,22 @@ buttons.login = Zaloguj się
 buttons.register = Zarejestruj się
 
 labels.username = Nazwa użytkownika
+labels.email = Adres mailowy
 labels.password = Hasło
 labels.passwordConfirm = Powtórz hasło
 
 pl.dmcs.nsai.User.username.nullable = Nazwa użytkownika nie może być pusta
 pl.dmcs.nsai.User.username.unique = Nazwa użytkownika jest już zajęta
 pl.dmcs.nsai.User.username.minSize.notmet = Nazwa użytkownika jest za krótka
+pl.dmcs.nsai.User.email.nullable = Adres email jest wymagany
+pl.dmcs.nsai.User.email.invalid = Podany email jest nieprawidłowy
 pl.dmcs.nsai.User.password.nullable = Hasło nie może być puste
 pl.dmcs.nsai.User.password.minSize.notmet = Hasło jest za krótkie
 pl.dmcs.nsai.User.password.invalid.matchingpasswords = Hasła nie nie sa takie same
+
 User.invalidUsername = Niepoprawna nazwa użytkownika
+User.invalidEmail = Niepoprawny adres mailowy
 User.invalidPassword = Niepoprawne hasło
 User.invalidRecaptcha = Udowodnij, że jesteś istota ludzka
+
+messages.registration = Witamy w systemie rezerwacji.
