Allow to change language from the login page

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -1,5 +1,6 @@
 buttons.login = Zaloguj się
 buttons.register = Zarejestruj się
+buttons.back = Powrót
 
 labels.username = Nazwa użytkownika
 labels.email = Adres mailowy
