Show a list of users

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
@@ -22,3 +22,8 @@ User.invalidPassword = Invalid password
 User.invalidRecaptcha = Prove you are a human being
 
 messages.registration = Welcome to the reservation system.
+
+menu.items.home = Home
+menu.items.users = Users
+menu.items.reservations = Reservations
+menu.items.logout = Log out
