--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -22,3 +22,8 @@ User.invalidPassword = Niepoprawne hasło
 User.invalidRecaptcha = Udowodnij, że jesteś istota ludzka
 
 messages.registration = Witamy w systemie rezerwacji.
+
+menu.items.home = Strona główna
+menu.items.users = Lista użytkowników
+menu.items.reservations = Lista rezerwacji
+menu.items.logout = Wyloguj się
