Allow admins to remove user

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -6,6 +6,7 @@ labels.username = Nazwa użytkownika
 labels.email = Adres mailowy
 labels.password = Hasło
 labels.passwordConfirm = Powtórz hasło
+labels.enabled = Aktywne konto
 
 pl.dmcs.nsai.User.username.nullable = Nazwa użytkownika nie może być pusta
 pl.dmcs.nsai.User.username.unique = Nazwa użytkownika jest już zajęta
