--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
@@ -6,6 +6,7 @@ labels.username = Username
 labels.email = Email address
 labels.password = Password
 labels.passwordConfirm = Password confirmation
+labels.enabled = Enabled
 
 pl.dmcs.nsai.User.username.nullable = Username can't be empty
 pl.dmcs.nsai.User.username.unique = Username must be unique
