Add my reservations menu item

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
@@ -27,4 +27,5 @@ messages.registration = Welcome to the reservation system.
 menu.items.home = Home
 menu.items.users = Users
 menu.items.reservations = Reservations
+menu.items.myReservations = My Reservations
 menu.items.logout = Log out
