--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -27,4 +27,5 @@ messages.registration = Witamy w systemie rezerwacji.
 menu.items.home = Strona główna
 menu.items.users = Lista użytkowników
 menu.items.reservations = Lista rezerwacji
+menu.items.myReservations = Moje rezerwacje
 menu.items.logout = Wyloguj się
