Allow admins to arrange restaurant layout

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
@@ -1,6 +1,7 @@
 buttons.login = Login
 buttons.register = Register
 buttons.back = Back
+buttons.addtable = Add table
 
 labels.username = Username
 labels.email = Email address
