--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -1,6 +1,7 @@
 buttons.login = Zaloguj się
 buttons.register = Zarejestruj się
 buttons.back = Powrót
+buttons.addtable = Dodaj stolik
 
 labels.username = Nazwa użytkownika
 labels.email = Adres mailowy
