Add new message definitions

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
@@ -2,12 +2,20 @@ buttons.login = Login
 buttons.register = Register
 buttons.back = Back
 buttons.addtable = Add table
+buttons.create = Create
+buttons.cancel = Cancel
+buttons.edit = Edit
+buttons.save = Save changes
 
 labels.username = Username
 labels.email = Email address
 labels.password = Password
 labels.passwordConfirm = Password confirmation
 labels.enabled = Enabled
+labels.numberofseats = Number of chairs
+labels.tableshape = Shape of the table
+labels.circle = Circular
+labels.rect = Rectangular
 
 pl.dmcs.nsai.User.username.nullable = Username can't be empty
 pl.dmcs.nsai.User.username.unique = Username must be unique
@@ -30,3 +38,5 @@ menu.items.users = Users
 menu.items.reservations = Reservations
 menu.items.myReservations = My Reservations
 menu.items.logout = Log out
+
+header.newtable = New table
