--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -2,12 +2,20 @@ buttons.login = Zaloguj się
 buttons.register = Zarejestruj się
 buttons.back = Powrót
 buttons.addtable = Dodaj stolik
+buttons.create = Utwórz
+buttons.cancel = Anuluj
+buttons.edit = Edytuj
+buttons.save = Zapisz zmiany
 
 labels.username = Nazwa użytkownika
 labels.email = Adres mailowy
 labels.password = Hasło
 labels.passwordConfirm = Powtórz hasło
 labels.enabled = Aktywne konto
+labels.numberofseats = Ilość krzeseł
+labels.tableshape = Kształt stolika
+labels.circle = Okragly
+labels.rect = Prostokatny
 
 pl.dmcs.nsai.User.username.nullable = Nazwa użytkownika nie może być pusta
 pl.dmcs.nsai.User.username.unique = Nazwa użytkownika jest już zajęta
@@ -30,3 +38,5 @@ menu.items.users = Lista użytkowników
 menu.items.reservations = Lista rezerwacji
 menu.items.myReservations = Moje rezerwacje
 menu.items.logout = Wyloguj się
+
+header.newtable = Nowy stolik
