Allow users to create a reservation

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
@@ -16,6 +16,11 @@ labels.numberofseats = Number of chairs
 labels.tableshape = Shape of the table
 labels.circle = Circular
 labels.rect = Rectangular
+labels.tableNo = Table number
+labels.reservationDate = Reservation date
+labels.firstName = First name
+labels.lastName = Last name
+labels.phoneNumber = Phone number
 
 pl.dmcs.nsai.User.username.nullable = Username can't be empty
 pl.dmcs.nsai.User.username.unique = Username must be unique
@@ -32,11 +37,13 @@ User.invalidPassword = Invalid password
 User.invalidRecaptcha = Prove you are a human being
 
 messages.registration = Welcome to the reservation system.
+messages.confirmation = Here you can find the confirmation of your reservation.
+messages.greetings = Greetings
 
 menu.items.home = Home
 menu.items.users = Users
 menu.items.reservations = Reservations
-menu.items.myReservations = My Reservations
 menu.items.logout = Log out
 
 header.newtable = New table
+header.newreservation = New reservation
