--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -16,6 +16,11 @@ labels.numberofseats = Ilość krzeseł
 labels.tableshape = Kształt stolika
 labels.circle = Okragly
 labels.rect = Prostokatny
+labels.tableNo = Numer stolika
+labels.reservationDate = Data rezerwacji
+labels.firstName = Imię
+labels.lastName = Nazwisko
+labels.phoneNumber = Numer kontaktowy
 
 pl.dmcs.nsai.User.username.nullable = Nazwa użytkownika nie może być pusta
 pl.dmcs.nsai.User.username.unique = Nazwa użytkownika jest już zajęta
@@ -32,11 +37,13 @@ User.invalidPassword = Niepoprawne hasło
 User.invalidRecaptcha = Udowodnij, że jesteś istota ludzka
 
 messages.registration = Witamy w systemie rezerwacji.
+messages.confirmation = W załaczniku znajduje się potwierdzenie Państwa rezerwacji.
+messages.greetings = Pozdrawiamy
 
 menu.items.home = Strona główna
 menu.items.users = Lista użytkowników
 menu.items.reservations = Lista rezerwacji
-menu.items.myReservations = Moje rezerwacje
 menu.items.logout = Wyloguj się
 
 header.newtable = Nowy stolik
+header.newreservation = Nowa rezerwacja
