Added more i18n messages

--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages.properties
@@ -39,6 +39,11 @@ User.invalidRecaptcha = Prove you are a human being
 messages.registration = Welcome to the reservation system.
 messages.confirmation = Here you can find the confirmation of your reservation.
 messages.greetings = Greetings
+messages.reservationCancelled = You have successfully cancelled the reservation
+messages.noReservation = There is no reservation with id {0}
+messages.successfullReservation = You have successfully booked the table
+messages.noTable = There is no table with id: {0}
+messages.existingReservation = There is already another reservation at {0}
 
 menu.items.home = Home
 menu.items.users = Users
