--- a/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
+++ b/Groovy/RestaurantReservationSystem/grails-app/i18n/messages_pl.properties
@@ -39,6 +39,11 @@ User.invalidRecaptcha = Udowodnij, że jesteś istota ludzka
 messages.registration = Witamy w systemie rezerwacji.
 messages.confirmation = W załaczniku znajduje się potwierdzenie Państwa rezerwacji.
 messages.greetings = Pozdrawiamy
+messages.reservationCancelled = Rezerwacja została anulowana
+messages.noReservation = Brak rezerwacji o numerze {0}
+messages.successfullReservation = Rezerwacja przebiegła pomyślnie
+messages.noTable = Brak stolika o id {0}
+messages.existingReservation = Stolik ten jest już zarezerwowany w {0}
 
 menu.items.home = Strona główna
 menu.items.users = Lista użytkowników
